assignment upto word finished

--- a/views/dca102welcomepage.ejs
+++ b/views/dca102welcomepage.ejs
@@ -19,9 +19,9 @@
             <hr class="w-25 mx-auto text-secondary my-1">
             <h3 class="fw-light fs-1 text-center mt-0 mb-0">  Operating System  <br></h3>
             <hr class="text-muted">
-            <p class="fw-normal">Tuunah hian DCA I Semester hnuaia subject pahnihna (a code hming <code> DCA-102) </code>kan zir dawn a, 
+            <p class="fw-normal">Tunah hian subject pahnihna (a code hming <code> DCA-102) </code>kan zir dawn a, 
                a subject hming chu  <code> Operating System </code> a ni. 
-               Kan hriat angin tuna kan zir tur hi <code>theory </code> a ni dawn a. 
+               Kan hriat angin tuna kan zir tur hi theory a ni dawn a. 
                Syllabus milin kan zir dawn a ni. 
             </p>
             <h5 class="text-dark fw-normal mt-4 ">DCA-102 Chapter te</h5>
