--- a/views/dca103welcomepage.ejs
+++ b/views/dca103welcomepage.ejs
@@ -38,16 +38,11 @@
             
             <hr class="text-muted">
             
-            <p class="fw-normal">DCA I Semester hnuaia subject pathumna (a code hming <code> DCA-103) </code>kan zir dawn a, 
+            <p class="fw-normal">Subject pathumna (a code hming <code> DCA-103) </code>kan zir dawn a, 
             a subject hming chu  <code> Office Automation Software </code> a ni. 
             
-            He subject-ah hian <code>Microsoft Word</code> te,<code> Excel</code> te leh <code>powerpoint </code>  te kan zir ang a, subject khatah 
-            software chi hrang pathum kan zir dawn a. 
-            Syllabus milin kan zir dawn a ni. </p>
-            
-            <p>
-              
-              He subject-ah hian hetiangin mark thendarh a ni. <b>Microsoft Word </b>- 15 marks, <b>Microsoft Excel </b>- 15 marks, <b>Microsoft Powerpoint </b>- 10 marks.
+            He subject-ah hian <code>Microsoft Word </code> te,<code> Excel</code> te leh <code>powerpoint </code>  te kan zir ang a, subject khatah 
+            software chi hrang pathum kan zir dawn a, Microsoft Office version 2007 kan zir ang. He subject-ah hian hetiangin mark thendarh a ni; <em>Microsoft Word </em>- 15 marks, <em>Microsoft Excel </em>- 15 marks, <em>Microsoft Powerpoint </em>- 10 marks tiin.
               
             </p>
 
