--- a/views/dca1semOnlineLessonChapter5.ejs
+++ b/views/dca1semOnlineLessonChapter5.ejs
@@ -41,7 +41,7 @@
                         
                           <div class="d-flex justify-content-between m-1">
                             
-                            <a href="dca1semOnlineLessonChapter5"><button type="button" class="btn btn-sm btn-outline-secondary"> Chapter-5 </button></a>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"> Chapter-5 </button>
                             
                               <div class="dropdown">
                 
@@ -193,50 +193,74 @@ Input Devices (Keyboard Devices, Point-and-Draw Devices, Data Scanning Devices, 
 
 <em><p>5) INPUT-OUTPUT DEVICES - (4 MARKS)</p></em>
 
-<p><code>Input and output (I/O) devices</code> allow the computer system to interact with the outside world by
+<p><b>Input and output (I/O) devices</b> allow the computer system to interact with the outside world by
 moving data into and out of the system. They are also known as peripheral devices because they
 surround a computer’s CPU and memory.</p>
 
-<p><code>An input device </code>is used to bring data into the system. Some input devices are - Keyboard, Mouse,
-Microphone, Bar code reader, Graphics tablet.  <code>A computer keyboard</code> is a typewriter-style device which is composed of buttons that
+<p><b>An input device </b>is used to bring data into the system. Some input devices are - Keyboard, Mouse,
+Microphone, Bar code reader, Graphics tablet.  
+</p><p>
+<code>A computer keyboard</code> is a typewriter-style device which is composed of buttons that
 create letters, numbers, and symbols, as well as perform other functions. The most popular keyboard
-used today is the 101-keys QWERTY keyboard. <code>Point & Draw Devices</code> is a hardware input device that allows the user to move the mouse pointer.
+used today is the 101-keys QWERTY keyboard. 
+</p><p>
+<code>Point & Draw Devices</code> is a hardware input device that allows the user to move the mouse pointer.
 Good examples of pointing devices are a computer mouse, trackball, light pens and touch screen.
-Mouse is the most popular point and draw device. <code>Data scanning device </code> is an electronic device that scans printed or handwritten text documents,
+Mouse is the most popular point and draw device. 
+</p><p>
+<code>Data scanning device </code> is an electronic device that scans printed or handwritten text documents,
 images, or certain objects, and converts them into a digital file format. Eg., flatbed scanners and
-handheld scanners. <code>Optical Character Recognition (OCR) device </code> scanner first creates the bitmap image of the
+handheld scanners. 
+</p><p>
+<code>Optical Character Recognition (OCR) device </code> scanner first creates the bitmap image of the
 document and then the OCR software translates the array of grid points into ASCII text that the
-computer can interpret as letters, numbers, and special characters. <code>Optical Mark Reader (OMR)</code> is a scanner, which can recognize a pre-specified type of mark made by
+computer can interpret as letters, numbers, and special characters. 
+</p><p>
+<code>Optical Mark Reader (OMR)</code> is a scanner, which can recognize a pre-specified type of mark made by
 pencil or pen. For example, in objective type tests, the answer sheets are fed to an OMR device for
-grading with a computer automatically. <code>Bar-code reader</code> is a device for reading (de-coding) bar-coded data. Data coded in the form of small
+grading with a computer automatically. 
+</p><p>
+<code>Bar-code reader</code> is a device for reading (de-coding) bar-coded data. Data coded in the form of small
 lines are known as bar codes. All types of goods, books, postal packages, badges, tags, etc. use bar
-codes for unique identification purpose. <code>
-Magnetic-Ink Character Recognition (MICR)</code>  is similar to OCR. Banking industry uses it for faster
-cheque processing.  <code> A digitizer </code> is an input device used for converting (digitizing) pictures, maps, and drawings into
+codes for unique identification purpose. 
+</p><p>
+<code>Magnetic-Ink Character Recognition (MICR)</code>  is similar to OCR. Banking industry uses it for faster
+cheque processing.  
+</p><p>
+<code> A digitizer </code> is an input device used for converting (digitizing) pictures, maps, and drawings into
 digital form for input to computers. Architects and engineers commonly use digitizers in the area of
 Computer Aided Design (CAD) for designing cars, building, medical devices, robots, mechanical parts,
-etc. <code> Electronic card readers </code> are electronic devices that can read plastic cards embedded with either a
+etc. 
+</p><p>
+<code> Electronic card readers </code> are electronic devices that can read plastic cards embedded with either a
 barcode, magnetic strip, computer chip or another storage medium. Eg. ATM (automatic teller
-machines) is also debit/credit card reader device. <code> Speech recognition devices </code> are input devices that allow a person to input data to a computer
+machines) is also debit/credit card reader device. 
+</p><p>
+<code> Speech recognition devices </code> are input devices that allow a person to input data to a computer
 system by speaking to it. </p>
 
 <hr class="w-25">
-<p> <code>AN OUTPUT DEVICE </code> - Output
+<p> <b>AN OUTPUT DEVICE </b> - Output
 devices generate computer outputs
 that are broadly of following two types
 - Soft-copy output and hard-copy
 output.
 
 <p>
-<code>Some output devices are </code> - <code>Monitors</code> are the most popular softcopy output devices used today. A
+<b>Some output devices are </b> - 
+
+</p><p>
+<code>Monitors</code> are the most popular softcopy output devices used today. A
 monitor is associated usually with a
 keyboard and together they form a
 video display terminal (VDT). A VDT
 (often referred to as just terminal) is both an input and output device. Two basic types of monitors are
 cathode-ray-tube (CRT) and LCD (Liquid Crystal display) flat-panel.
-
+</p><p>
 <code>Printers </code> are the most popular hard-copy output devices used today. Different types of printers are
 described below.
+</p><p>
+
 <code>Dot-Matrix Printers </code> are character
 printers that print one character at a
 time. Dot-matrix printers are impact
@@ -245,38 +269,43 @@ hammering pins on an inked ribbon
 to leave ink impressions on a paper.
 The printing speeds 30 to 600
 characters per second.
+
+</p><p>
 <code>Inkjet Printers</code> are character
 printers that form characters and
 images by spraying small drops of ink
-on a paper. The print head can
-contains upto 64 tiny nozzles. It has printing speeds ranging 40 to 300 characters per second. Inkjet
-printers are non impact printer and are both monochrome and color.
+on a paper. Inkjet printers are non impact printer and are both monochrome and color.
+
+</p><p>
 <code>Drum printers</code> are line printers that print an entire line at a time. Recall that dot matrix and inkjet
-printers print one character at a time. Due to impact printing, drum printers are noisy in operation and
-printing speeds are in the range of 300 to 2000 lines per minute.
+printers print one character at a time. 
+</p><p>
+
 <code>Chain/Band Printers </code> are line
 printers that print one line at a time.
 The chain/band rotates at a high
-speed. Unlike the drum of a drum
-printer, we can change the chain of
-the chain printer easily. Chain
-printers are impact printers.
+speed. 
+</p><p>
 <code>Laser Printers </code> are page printers
 that print one page at a time. Main components of a laser printner are a laser beam source, a multi-sided mirror, a photoconductive drum, and
-toner. The most common laser printers have resolution of 600 dpi (dots per inch) to 1200 dpi. Laser printers are
+toner. Laser printers are
 non impact printers.
+</p><p>
 <code>Plotters </code> - A plotter is an ideal output device for architects, engineers, city planners, and others who
 need to generate high precision, hard-copy, graphic output of varying sizes. Two types of plotters in
 common use are drum plotter and flatbed plotter.
-
+</p><p>
 <code>Screen Image Projector </code> - is an output device, which is used to display information from a computer
 on a large screen so that a group of people can view it simultaneously. It has become common
 presentation equipment today.
-
+</p><p>
 <code>Voice Response Systems </code> enables a computer to talk to a user. It has an audio-response device that
 produces audio output. Voice response systems are of two types – voice reproduction system and
 speech synthesizer.
+</p><p>
 <code>Voice reproduction system </code> produces audio output by selecting an audio output from a set of prerecorded audio responses. Eg., ATM machine audio help for guiding how to operate ATM system.
+</p><p>
+
 <code>Speech Synthesizer </code> converts text information into spoken sentences. To produce speech, it
 combines basic sound units called phonemes. This is very useful for reading out text information to blind
 persons. 
@@ -309,13 +338,188 @@ persons.
                       <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                         
                     <div class="accordion-body">
+
+                      <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-outline-primary float-end" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                       
+                     Click here to answer assignment
                       
-                      <!--Assignment form started-->
+                    </button>
+
                       
+              <p class="fs-4 fw-light mt-3">
+                    
+                    Scoreboard 
+                    
+                  </p>
+                  
+                  
+                  <!--scoreboard-->
+                  
+      <div class="table-responsive">
+        
+        <table class="table table-striped table-sm myTable">
+          
+          <thead>
+            
+            <tr class="text-muted border text-center">
+              
+              <th>Sl.</th>
+              
+              
+              <th>Correct</th>
+              
+              <th>Incorrect</th>
+              
+              <th>Scored</th>
+              
+                            
+              <th>Dated</th>
+              
+              <th>Action</th>
+
+            </tr>
+            
+          </thead>
+          
+          <tbody class="text-center">
+            
+            <%    if( thisStudent.assignmentTheory != undefined) {
+                      //serial atan aw
+                      var noOfAttempt = 0;
                       
+              
+                      for(var i=0; i < thisStudent.assignmentTheory.length; i++) {
+                        
+                        if(thisStudent.assignmentTheory[i].chapterName == 'Chapter-5') {
+                          //display serial
+                          noOfAttempt += 1;
+                          
+                          //count of correct and incorrect answered
+                            var correctCount = 0;
+                            var incorrect = 0;
+                            var questionNumber = [];
+                          
+                          //question 1
+                          if(thisStudent.assignmentTheory[i].mcq1 == 'Keyboard') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q1');
+                          }
+                          //question 2
+                          if(thisStudent.assignmentTheory[i].mcq2 == 'Inkjet') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q2');
+                          }
+                          //question 3
+                          if(thisStudent.assignmentTheory[i].mcq3 == 'Optical Mark Reader') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q3');
+                          }
+                           //question 4
+                          if(thisStudent.assignmentTheory[i].mcq4 == 'Plotters') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q4');
+                          }
+                           //question 5
+                          if(thisStudent.assignmentTheory[i].mcq5 == 'Input/Output') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q5');
+                          }
+                          
+                          
+                  %>
+            
+           <tr>
+              
+              <th class="text-center fw-normal"><%= noOfAttempt %></th>
+              
+              <td class="text-center fw-normal text-success"><%= correctCount %></td>
+              
+              <td class="text-center fw-normal text-danger small"><%=  questionNumber %></td>
+              
+              <td class="text-center fw-normal">
+                
+               <%= correctCount %>/5
+
+              </td>
+              
+              <td class="text-center fw-normal"><%= convertDate(thisStudent.assignmentTheory[i].dateSubmitted) %></td>
+              
+              <td>
+                
+                 <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
+                  
+                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+              
+              </td>
+  
+            </tr>
+        
+            <% } } } %>
+
+          </tbody>
+          
+        </table>
+        
+      </div>
+                  
+ 
+              </div><!-- end of 4th collapse assignment-->
                       
-            <form action="/computerStudents/theoryAssignment" method="POST" autocomplete="off">
+                      </div>
+               
+                  </div>
+                  
+                  
+              
+                </div>
+              
+              </div>
+              
+           <hr>
+            
+ 
+            
+            </div>
+            
+            </div>
+ 
+
+    </main>
+    
+</div> <!--end of container-->
+
+
+
+    <%- include('layouts/scripts') -%>
+    
+    <%- include('layouts/footer') -%>
+    
+    
+    <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">A hnuaia zawhna te hi chhang rawh</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        
+                                                 
+           <!--Assignment form started-->
+            
+           <form action="/computerStudents/theoryAssignment" method="POST" autocomplete="off">
               
               
               <input type="hidden" name="_id" value="<%= studentId %>" aria-hidden="true">
@@ -323,12 +527,9 @@ persons.
               <input type="hidden" name="subjectName" value="DCA-101 (Theory)" aria-hidden="true">
               
               <input type="hidden" name="chapterName" value="Chapter-5" aria-hidden="true">
-              
-                      
-                      <h6 class="text-center">A hnuaia zawhnate hi chhang rawh.</h6>
 
             
-                 <p class="fw-bold mt-3">
+                 <p class="fs-5 fw-light">
                     
                     Q1. One example of input device is ________.
                     
@@ -395,7 +596,7 @@ persons.
                  
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q2. _______ printers are character printers that form characters and images by spraying small drops of ink on a paper.
                     
@@ -457,7 +658,7 @@ persons.
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q3. OMR stands for ________?
                     
@@ -519,7 +720,7 @@ persons.
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q4. A ________ is an ideal output device for architects, engineers, city planners, and others who need to generate 
                     high precision, hard-copy, graphic output of varying sizes.
@@ -582,7 +783,7 @@ persons.
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                    Q5. ________ devices allow the computer system to interact with the outside world by
                         moving data into and out of the system.
@@ -657,52 +858,14 @@ persons.
                   
                       
                     </form>
-                      
-                      
-                      
-                      
-                      
-
-                    </div><!-- end of 4th collapse assignment-->
-                      
-                      </div>
-               
-                  </div>
-                  
-                  
-              
-                </div>
-              
-              </div>
-              
-              </div>
-              
-              <hr>
-              
-
-              
-              
-              
-              </div>
-              
-              
-              
-              </div>
-              
-            
+      </div>
+    </div>
+  </div>
+</div>
     
-            
- 
-
-    </main>
     
-</div> <!--end of container-->
-
-
-
-    <%- include('layouts/scripts') -%>
     
-    <%- include('layouts/footer') -%>
+    
 
   </body>
   
