--- a/views/assignmentCheckScore.ejs
+++ b/views/assignmentCheckScore.ejs
@@ -4,35 +4,46 @@
   
 <%- include('layouts/headers') -%>
 
-
 <body class="bg-light">
     
-    <%- include('layouts/navbar') -%>
+   
+<nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+  
+  <div class="container-fluid">
+      
+    <a class="navbar-brand fw-normal pt-0 pb-0" href="javascript:history.back()">
+        
+      <i class="fas fa-arrow-left me-3 text-secondary"></i> Jojo Computer Institute
+      
+    </a>
     
-    <%- include ('ejsFunction') %> <!--function javascript ejs-->
+    
+    
+  </div>
+  
+</nav>
     
 
 
-    <!-- --------------main container section------------------ -->
+<!-- --------------main container section------------------ -->
 
 <div class="container">
-  
-    
 
     <main class="ms-sm-auto px-md-4">
       
-      <a href="../../all/stdDashboard" class="small"> <i class="far fa-hand-point-left text-primary small mt-3"></i> Back to Dashboard</a>
-      
-      <!--second lane-->
 
-      <p class="mt-3 text-danger fw-bold lead">Answer Key</p>
-      
-  
-        
-        <!--Assignment form started-->
+        <div class="row">
+          
+          <div class="px-4 mt-3 text-center">
+            
+            <p class="fw-light mb-0"> Answer Key :: DCA-101 : Chapter-1 </p>
+          
+            <hr class="text-muted">
+            
+            </div>
         
 
-            <form action="#" method="POST" autocomplete="off">
+            <form action="#" method="POST" autocomplete="off" class="mx-auto" style="max-width:700px">
         
               
             <input type="hidden" name="_id" value="<%= studentId %>" aria-hidden="true">
@@ -236,7 +247,7 @@
                   
                   <p class="fw-normal mt-3">
                     
-                    Q4. ________ is a device that transforms data into a meaningful information?
+                    Q4. ________ is a device that transforms data into a meaningful information.
                     
                   </p>
                   
