--- a/views/dca102onlineclasschapter1.ejs
+++ b/views/dca102onlineclasschapter1.ejs
@@ -280,24 +280,200 @@ utility programs and other software packages to various users working on the com
                       <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                         
                     <div class="accordion-body">
+
+                    <div class="d-flex justify-content-end">
+
+                      <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                       
+                     Click here to answer assignment
                       
-                      <!--Assignment form started-->
-                      
-            <form action="/computerStudents/theoryAssignment" method="POST" autocomplete="off">
+                    </button>
+
+                  
+                  </div>
+                  
+                  <p class="fs-5 fw-light mt-2 mb-2">
+                    
+                    Assignment Table
+                    
+                  </p>
+                  
+                  
+                  <!--scoreboard-->
+                  
+      <div class="table-responsive">
+        
+        <table class="table table-striped table-sm myTable">
+          
+          <thead>
+            
+            <tr class="text-muted border text-center">
+              
+              <th>Sl.</th>
               
               
-              <input type="hidden" name="_id" value="<%= studentId %>" aria-hidden="true">
+              <th>Correct</th>
+              
+              <th>Incorrect</th>
+              
+              <th>Scored</th>
+              
+                            
+              <th>Dated</th>
+              
+              <th>Action</th>
+
+            </tr>
+            
+          </thead>
+          
+          <tbody class="text-center">
+            
+            <%    if( thisStudent.assignmentTheory102 != undefined) {
+                      //serial atan aw
+                      var noOfAttempt = 0;
+                      
+              
+                      for(var i=0; i < thisStudent.assignmentTheory102.length; i++) {
+                        
+                        if(thisStudent.assignmentTheory102[i].chapterName == 'Chapter-1') {
+                          //display serial
+                          noOfAttempt += 1;
+                          
+                          //count of correct and incorrect answered
+                            var correctCount = 0;
+                            var incorrect = 0;
+                            var questionNumber = [];
+                          
+                          //question 1
+                          if(thisStudent.assignmentTheory102[i].mcq1 == 'Program') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q1');
+                          }
+                          //question 2
+                          if(thisStudent.assignmentTheory102[i].mcq2 == 'Linux') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q2');
+                          }
+                          //question 3
+                          if(thisStudent.assignmentTheory102[i].mcq3 == 'All of these') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q3');
+                          }
+                           //question 4
+                          if(thisStudent.assignmentTheory102[i].mcq4 == 'Operating System') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q4');
+                          }
+                           //question 5
+                          if(thisStudent.assignmentTheory102[i].mcq5 == 'Operating System') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q5');
+                          }
+                          
+                          
+                  %>
+            
+           <tr>
+              
+              <th class="text-center fw-normal"><%= noOfAttempt %></th>
+              
+              <td class="text-center fw-normal text-success"><%= correctCount %></td>
+              
+              <td class="text-center fw-normal text-danger small"><%=  questionNumber %></td>
+              
+              <td class="text-center fw-normal">
+                
+               <%= correctCount %>/5
+
+              </td>
+              
+              <td class="text-center fw-normal"><%= convertDate(thisStudent.assignmentTheory102[i].dateSubmitted) %></td>
+              
+              <td>
+                
+                 <a href="/assignment/delete102/<%= studentId %>/<%= thisStudent.assignmentTheory102[i]._id %>" onclick="return confirm('He record i delete duh em ni?');">
+                  
+                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+              
+              </td>
+  
+            </tr>
+        
+            <% } } } %>
+
+          </tbody>
+          
+        </table>
+        
+      </div>
+                  
+ 
+              </div><!-- end of 4th collapse assignment-->
+                      
+                      </div>
+               
+                  </div>
+                  
+                  
+              
+                </div>
+              
+              </div>
+              
+           <hr>
+            
+ 
+            
+            </div>
+            
+            </div>
+ 
+
+    </main>
+    
+</div> <!--end of container-->
+
+
+
+    <%- include('layouts/scripts') -%>
+    
+    <%- include('layouts/footer') -%>
+    
+    
+    <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">A hnuaia zawhna te hi chhang rawh</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        
+                                                 
+           <!--Assignment form started-->
+            
+        <form action="/computerStudents/theoryAssignment102" method="POST" autocomplete="off">
+             
+               <input type="hidden" name="_id" value="<%= studentId %>" aria-hidden="true">
               
               <input type="hidden" name="subjectName" value="DCA-102 (Theory)" aria-hidden="true">
               
               <input type="hidden" name="chapterName" value="Chapter-1" aria-hidden="true">
-
-                 
-                 <h6 class="text-center lead">A hnuaia zawhnate hi chhang rawh.</h6>
-
             
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light">
                     
                     Q1. The set of instructions given to a computer to perform a task is called a __________.
                     
@@ -364,7 +540,7 @@ utility programs and other software packages to various users working on the com
                  
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q2. ________ is a UNIX like operating system. It is free and open source program originally developed by Linus Torvalds in 1991 for personal computers.
                     
@@ -426,7 +602,7 @@ utility programs and other software packages to various users working on the com
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q3. Which of the following is function of operating system?
                     
@@ -488,7 +664,7 @@ utility programs and other software packages to various users working on the com
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q4. The most important program for the computer is ________?
                     
@@ -550,7 +726,7 @@ utility programs and other software packages to various users working on the com
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                    Q5. File management, which includes organizing, naming, protecting, accessing and using files, is one of the key functions of an _________.
                    
@@ -619,38 +795,10 @@ utility programs and other software packages to various users working on the com
                   </div>
     
                </form>
-                  
- 
-              </div><!-- end of 4th collapse assignment-->
-                      
-                      </div>
-               
-                  </div>
-                  
-                  
-              
-                </div>
-              
-              </div>
-              
-           <hr>
-            
-
-            
-            </div>
-            
-            </div>
- 
-
-    </main>
-    
-</div> <!--end of container-->
-
-
-
-    <%- include('layouts/scripts') -%>
-    
-    <%- include('layouts/footer') -%>
+      </div>
+    </div>
+  </div>
+</div>
 
   </body>
   
