--- a/views/dca1semOnlineLessonChapter10.ejs
+++ b/views/dca1semOnlineLessonChapter10.ejs
@@ -40,7 +40,7 @@
                         
                           <div class="d-flex justify-content-between m-1">
                             
-                            <a href="dca1semOnlineLessonChapter10"><button type="button" class="btn btn-sm btn-outline-secondary"> Chapter-10 </button></a>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"> Chapter-10 </button>
                             
                               <div class="dropdown">
                 
@@ -318,24 +318,201 @@ Y2K - Year Two Thousand</p>
                       <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                         
                     <div class="accordion-body">
+
+                    <div class="d-flex justify-content-end">
+
+                      <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                       
+                     Click here to answer assignment
                       
-                      <!--Assignment form started-->
-                      
-                     <form action="/computerStudents/theoryAssignment" method="POST" autocomplete="off">
+                    </button>
+
+                  
+                  </div>
+                  
+                  <p class="fs-5 fw-light mt-2 mb-2">
+                    
+                    Assignment Table
+                    
+                  </p>
+                  
+                  
+                  <!--scoreboard-->
+                  
+      <div class="table-responsive">
+        
+        <table class="table table-striped table-sm myTable">
+          
+          <thead>
+            
+            <tr class="text-muted border text-center">
+              
+              <th>Sl.</th>
               
               
-              <input type="hidden" name="_id" value="<%= studentId %>" aria-hidden="true">
+              <th>Correct</th>
+              
+              <th>Incorrect</th>
+              
+              <th>Scored</th>
+              
+                            
+              <th>Dated</th>
+              
+              <th>Action</th>
+
+            </tr>
+            
+          </thead>
+          
+          <tbody class="text-center">
+            
+            <%    if( thisStudent.assignmentTheory != undefined) {
+                      //serial atan aw
+                      var noOfAttempt = 0;
+                      
+              
+                      for(var i=0; i < thisStudent.assignmentTheory.length; i++) {
+                        
+                        if(thisStudent.assignmentTheory[i].chapterName == 'Chapter-10') {
+                          //display serial
+                          noOfAttempt += 1;
+                          
+                          //count of correct and incorrect answered
+                            var correctCount = 0;
+                            var incorrect = 0;
+                            var questionNumber = [];
+                          
+                          //question 1
+                          if(thisStudent.assignmentTheory[i].mcq1 == 'Wireless Fidelity') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q1');
+                          }
+                          //question 2
+                          if(thisStudent.assignmentTheory[i].mcq2 == 'Virtual Private Network') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q2');
+                          }
+                          //question 3
+                          if(thisStudent.assignmentTheory[i].mcq3 == 'Electronically Erasable Programmable Read-Only Memory') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q3');
+                          }
+                           //question 4
+                          if(thisStudent.assignmentTheory[i].mcq4 == 'Portable Document Format') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q4');
+                          }
+                           //question 5
+                          if(thisStudent.assignmentTheory[i].mcq5 == 'Basic Input Output System') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q5');
+                          }
+                          
+                          
+                  %>
+            
+           <tr>
+              
+              <th class="text-center fw-normal"><%= noOfAttempt %></th>
+              
+              <td class="text-center fw-normal text-success"><%= correctCount %></td>
+              
+              <td class="text-center fw-normal text-danger small"><%=  questionNumber %></td>
+              
+              <td class="text-center fw-normal">
+                
+               <%= correctCount %>/5
+
+              </td>
+              
+              <td class="text-center fw-normal"><%= convertDate(thisStudent.assignmentTheory[i].dateSubmitted) %></td>
+              
+              <td>
+                
+                 <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
+                  
+                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+              
+              </td>
+  
+            </tr>
+        
+            <% } } } %>
+
+          </tbody>
+          
+        </table>
+        
+      </div>
+                  
+ 
+              </div><!-- end of 4th collapse assignment-->
+                      
+                      </div>
+               
+                  </div>
+                  
+                  
+              
+                </div>
+              
+              </div>
+              
+           <hr>
+            
+ 
+            
+            </div>
+            
+            </div>
+ 
+
+    </main>
+    
+</div> <!--end of container-->
+
+
+
+    <%- include('layouts/scripts') -%>
+    
+    <%- include('layouts/footer') -%>
+    
+    
+    <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">A hnuaia zawhna te hi chhang rawh</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        
+                                                 
+           <!--Assignment form started-->
+            
+        <form action="/computerStudents/theoryAssignment" method="POST" autocomplete="off">
+            
+            <input type="hidden" name="_id" value="<%= studentId %>" aria-hidden="true">
               
               <input type="hidden" name="subjectName" value="DCA-101 (Theory)" aria-hidden="true">
               
               <input type="hidden" name="chapterName" value="Chapter-10" aria-hidden="true">
-              
-                      
-                      <h6 class="text-center">A hnuaia zawhnate hi chhang rawh.</h6>
-
+  
             
-                 <p class="fw-bold mt-3">
+                 <p class="fs-5 fw-light">
                     
                     Q1. WIFI stands for ________.
                     
@@ -402,7 +579,7 @@ Y2K - Year Two Thousand</p>
                  
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q2. VPN stands for ________.
                     
@@ -464,7 +641,7 @@ Y2K - Year Two Thousand</p>
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q3. EEPROM stands for ________.
                     
@@ -526,7 +703,7 @@ Y2K - Year Two Thousand</p>
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q4. PDF stands for ________.
                     
@@ -588,7 +765,7 @@ Y2K - Year Two Thousand</p>
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                    Q5. BIOS stands for ________.
                    
@@ -662,47 +839,11 @@ Y2K - Year Two Thousand</p>
                   
                       
                     </form>
-                      
-
-                    </div><!-- end of 4th collapse assignment-->
-                      
-                      </div>
-               
-                  </div>
-                  
-                  
-              
-                </div>
-              
-              </div>
-              
-              </div>
-              
-              <hr>
-
-              
-              
-              
-              </div>
-              
-              
-              
-              </div>
-              
-            
+      </div>
+    </div>
+  </div>
+</div>
     
-            
- 
-
-    </main>
-    
-</div> <!--end of container-->
-
-
-
-    <%- include('layouts/scripts') -%>
-    
-    <%- include('layouts/footer') -%>
 
   </body>
   
