--- a/views/dca1semOnlineLessonChapter4.ejs
+++ b/views/dca1semOnlineLessonChapter4.ejs
@@ -44,7 +44,7 @@
                         
                           <div class="d-flex justify-content-between m-1">
                             
-                            <a href="dca1semOnlineLessonChapter4"><button type="button" class="btn btn-sm btn-outline-secondary"> Chapter-4 </button></a>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"> Chapter-4 </button>
                             
                               <div class="dropdown">
                 
@@ -293,12 +293,191 @@ digital cameras and solid-state drives.</p>
                       <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                         
                     <div class="accordion-body">
+
+                    <div class="d-flex justify-content-end">
+
+                      <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                       
+                     Click here to answer assignment
                       
-                      <!--Assignment form started-->
+                    </button>
+
+                  
+                  </div>
+                  
+                  <p class="fs-5 fw-light mt-2 mb-2">
+                    
+                    Assignment Table
+                    
+                  </p>
+                  
+                  
+                  <!--scoreboard-->
+                  
+      <div class="table-responsive">
+        
+        <table class="table table-striped table-sm myTable">
+          
+          <thead>
+            
+            <tr class="text-muted border text-center">
+              
+              <th>Sl.</th>
+              
+              
+              <th>Correct</th>
+              
+              <th>Incorrect</th>
+              
+              <th>Scored</th>
+              
+                            
+              <th>Dated</th>
+              
+              <th>Action</th>
+
+            </tr>
+            
+          </thead>
+          
+          <tbody class="text-center">
+            
+            <%    if( thisStudent.assignmentTheory != undefined) {
+                      //serial atan aw
+                      var noOfAttempt = 0;
                       
+              
+                      for(var i=0; i < thisStudent.assignmentTheory.length; i++) {
+                        
+                        if(thisStudent.assignmentTheory[i].chapterName == 'Chapter-4') {
+                          //display serial
+                          noOfAttempt += 1;
+                          
+                          //count of correct and incorrect answered
+                            var correctCount = 0;
+                            var incorrect = 0;
+                            var questionNumber = [];
+                          
+                          //question 1
+                          if(thisStudent.assignmentTheory[i].mcq1 == 'Magnetic Tape') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q1');
+                          }
+                          //question 2
+                          if(thisStudent.assignmentTheory[i].mcq2 == 'Magnetic Disk') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q2');
+                          }
+                          //question 3
+                          if(thisStudent.assignmentTheory[i].mcq3 == 'Secondary') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q3');
+                          }
+                           //question 4
+                          if(thisStudent.assignmentTheory[i].mcq4 == 'Universal Serial Bus') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q4');
+                          }
+                           //question 5
+                          if(thisStudent.assignmentTheory[i].mcq5 == 'Hierarchical Storage System') {
+                            correctCount++;
+                          } else {
+                            incorrect++;
+                            questionNumber.push('Q5');
+                          }
+                          
+                          
+                  %>
+            
+           <tr>
+              
+              <th class="text-center fw-normal"><%= noOfAttempt %></th>
+              
+              <td class="text-center fw-normal text-success"><%= correctCount %></td>
+              
+              <td class="text-center fw-normal text-danger small"><%=  questionNumber %></td>
+              
+              <td class="text-center fw-normal">
+                
+               <%= correctCount %>/5
+
+              </td>
+              
+              <td class="text-center fw-normal"><%= convertDate(thisStudent.assignmentTheory[i].dateSubmitted) %></td>
+              
+              <td>
+                
+                 <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
+                  
+                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+              
+              </td>
+  
+            </tr>
+        
+            <% } } } %>
+
+          </tbody>
+          
+        </table>
+        
+      </div>
+                  
+ 
+              </div><!-- end of 4th collapse assignment-->
                       
-                  <form action="/computerStudents/theoryAssignment" method="POST" autocomplete="off">
+                      </div>
+               
+                  </div>
+                  
+                  
+              
+                </div>
+              
+              </div>
+              
+           <hr>
+            
+ 
+            
+            </div>
+            
+            </div>
+ 
+
+    </main>
+    
+</div> <!--end of container-->
+
+
+
+    <%- include('layouts/scripts') -%>
+    
+    <%- include('layouts/footer') -%>
+
+ <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">A hnuaia zawhna te hi chhang rawh</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        
+                                                 
+           <!--Assignment form started-->
+            
+            <form action="/computerStudents/theoryAssignment" method="POST" autocomplete="off">
               
               
               <input type="hidden" name="_id" value="<%= studentId %>" aria-hidden="true">
@@ -307,11 +486,8 @@ digital cameras and solid-state drives.</p>
               
               <input type="hidden" name="chapterName" value="Chapter-4" aria-hidden="true">
               
-                      
-                      <h6 class="text-center">A hnuaia zawhnate hi chhang rawh.</h6>
-
-            
-                 <p class="fw-bold mt-3">
+              
+                 <p class="fs-5 fw-light">
                     
                     Q1. ________ is a long and narrow strip of plastic thin magnetic material is coated on.
                     
@@ -372,13 +548,10 @@ digital cameras and solid-state drives.</p>
                               </div>
                             
                           </div>
-                          
-   
-                    
-                 
+
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q2. Hard disks, zip disks and floppy disks are common examples of _______.
                     
@@ -440,7 +613,7 @@ digital cameras and solid-state drives.</p>
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q3. ________ storage devices such as hard drives stores data permanently.
                     
@@ -502,7 +675,7 @@ digital cameras and solid-state drives.</p>
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                     Q4. What is the full form of USB?
                     
@@ -564,7 +737,7 @@ digital cameras and solid-state drives.</p>
                     
                   </p>
                   
-                  <p class="fw-bold mt-3">
+                  <p class="fs-5 fw-light mt-3">
                     
                    Q5. Full form of HSS is ________?
                    
@@ -638,51 +811,15 @@ digital cameras and solid-state drives.</p>
                   
                       
                     </form>
-
-            
-                 
-                      
-
-                    </div><!-- end of 4th collapse assignment-->
-                      
-                      </div>
-               
-                  </div>
-                  
-                  
-              
-                </div>
-              
-              </div>
-              
-              </div>
-              
-              <hr>
-
-              
-              
-              
-              </div>
-              
-              
-              
-              </div>
-              
-            
-    
-            
+      </div>
+    </div>
+  </div>
+</div>
  
-
-    </main>
-    
-</div> <!--end of container-->
-
-
-
-    <%- include('layouts/scripts') -%>
-    
-    <%- include('layouts/footer') -%>
-
+ 
+ 
+ 
+ 
   </body>
   
   
