--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -6,7 +6,7 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
   
   <div class="container-fluid">
       
